--- a/index.html
+++ b/index.html
@@ -1,104 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/reset.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Header And Navigation -->
-    <div class="header">
-        <div class="navigation">
-            <div class="nav_logo">
-                <img src="images/logo.svg" alt="logo" class="nav_logo_img">
-            </div>
-            <div class="nav_links">
-                <ul class="nav_list">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">PORTFOLIO</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </div>
+    <header>
+      <div class="navigation">
+        <div class="nav_logo">
+          <img src="images/logo.svg" alt="logo" class="nav_logo_img" />
         </div>
-    </div>
-    <div class="main">
-        <!-- Top Container -->
-        <div class="top_container">
-            <div class="top_text">
-                <h1>
-                    Provide You best
-                    Best Ui Service
-                </h1>
-                <p>Mobile App Design and Development Studio. You can hire us</p>
-                <button>
-                    <img src="images/waving-hand.svg" alt="wave" class="wave"> Wave Me
-                </button>
-            </div>
-            <div class="top_image">
-                <img src="images/main_box_img.png" alt="">
-            </div>
+        <div class="nav_links">
+          <ul class="nav_list">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">PORTFOLIO</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
         </div>
-        <!-- Main Container And Cards -->
-        <div class="main_container">
-            <div class="main_text">
-                <p class="main_services">OUR SERVICES</p>
-                <h2>We Provide Best Quality Service</h2>
-                <p class="main_paragraph">Our commitment to quality ensures that your applications get the best UI
-                    design possible. UI/UX design is more than just pixels and animations, but the entire application
-                    experience.</p>
-            </div>
-            <div class="main_cards">
-                <div class="card_row_one">
-                    <div class="card" id="card_one">
-                        <img src="images/box1.svg" alt="">
-                        <h3>Website Ui</h3>
-                        <p>Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
-                        <button>Read More</button>
-                    </div>
-                    <div class="card" id="card_two">
-                        <img src="images/box2.svg" alt="">
-                        <h3>ReDesign</h3>
-                        <p>Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
-                        <button>Read More</button>
-                    </div>
-                    <div class="card" id="card_three">
-                        <img src="images/box3.svg" alt="">
-                        <h3>Application Ui</h3>
-                        <p>Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
-                        <button>Read More</button>
-                    </div>
-                </div>
-                <div class="card_row_two">
-                    <div class="card" id="card_four">
-                        <img src="images/box4.svg" alt="">
-                        <h3>Mobile App Ui</h3>
-                        <p>Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
-                        <button>Read More</button>
-                    </div>
-                    <div class="card" id="card_five">
-                        <img src="images/box5.svg" alt="">
-                        <h3>Web App Ui</h3>
-                        <p>Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
-                        <button>Read More</button>
-                    </div>
-                    <div class="card" id="card_six">
-                        <img src="images/box6.svg" alt="">
-                        <h3>Web Elements</h3>
-                        <p>Fast, Powerful & Most Secure Network Solutions for Smart Home & Businesses</p>
-                        <button>Read More</button>
-                    </div>
-                </div>
-            </div>
+      </div>
+    </header>
+    <section class="main">
+      <!-- Top Container -->
+      <div class="top_container">
+        <div class="top_text">
+          <h1>Provide You best Best Ui Service</h1>
+          <p>Mobile App Design and Development Studio. You can hire us</p>
+          <button>
+            <img src="images/waving-hand.svg" alt="wave" class="wave" /> Wave Me
+          </button>
         </div>
-    </div>
-    <div class="footer"></div>
-</body>
-
+        <div class="top_image">
+          <img src="images/main_box_img.png" alt="" />
+        </div>
+      </div>
+      <!-- Main Container And Cards -->
+      <div class="main_container">
+        <div class="main_text">
+          <p class="main_services">OUR SERVICES</p>
+          <h2>We Provide Best Quality Service</h2>
+          <p class="main_paragraph">
+            Our commitment to quality ensures that your applications get the
+            best UI design possible. UI/UX design is more than just pixels and
+            animations, but the entire application experience.
+          </p>
+        </div>
+        <div class="main_cards">
+          <div class="card_row_one">
+            <div class="card" id="card_one">
+              <img src="images/box1.svg" alt="" />
+              <h3>Website Ui</h3>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <button>Read More</button>
+            </div>
+            <div class="card" id="card_two">
+              <img src="images/box2.svg" alt="" />
+              <h3>ReDesign</h3>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <button>Read More</button>
+            </div>
+            <div class="card" id="card_three">
+              <img src="images/box3.svg" alt="" />
+              <h3>Application Ui</h3>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <button>Read More</button>
+            </div>
+          </div>
+          <div class="card_row_two">
+            <div class="card" id="card_four">
+              <img src="images/box4.svg" alt="" />
+              <h3>Mobile App Ui</h3>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <button>Read More</button>
+            </div>
+            <div class="card" id="card_five">
+              <img src="images/box5.svg" alt="" />
+              <h3>Web App Ui</h3>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <button>Read More</button>
+            </div>
+            <div class="card" id="card_six">
+              <img src="images/box6.svg" alt="" />
+              <h3>Web Elements</h3>
+              <p>
+                Fast, Powerful & Most Secure Network Solutions for Smart Home &
+                Businesses
+              </p>
+              <button>Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
